tests/snapshots/examples_fixtures/base__base_unknown_except_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_unknown_except_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E080]: Unknown Base Member

Base has no member named `does_not_exist`.

  examples/base/base_unknown_except_error.flx:3:1
  |
3 | import Base except [does_not_exist]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Check the Base surface or remove this name from `except`.


Warning: missing CFG bytecode binding for IR call dest


Found 1 error and 1 warning.
== stdout ==
<not executed>
